Evaluation Easter Work

--- a/Evaluation/evaluation.tex
+++ b/Evaluation/evaluation.tex
@@ -7,9 +7,9 @@
 
 Below is a list of all my general and specific objectives that I set myself in the analysis section. In this section I will determine whether I have met all of these objectives and the reasoning behind it. The subsections with *NEW* in the title are objectives that I did not identify in my analysis section; however during the course of my implementation, I attempted to meet the objectives. 
 
-\subsubsection{Aesthetically pleasing, easy to navigate GUI.} %Need feedback
+\subsubsection{Aesthetically pleasing, easy to navigate GUI.} 
 
-This objective has been met.
+\textbf{This objective has been met.}
 
 From the bar chart in Figure \ref{fig:AestheticsGraph} on page \pageref{fig:AestheticsGraph}, which gives a bar chart analysis of all of the questionnaire responses to asking about the aesthetics and ease of navigating the program. you can see that 60\% of the questionnaires that were filled in responded that they strongly agree that the program is aesthetically pleasing and easy to navigate, with a further 40\% agreeing. Making a total of 100\% positive feedback in response to the question posed. Therefore I believe that my program is aesthetically pleasing and easy to navigate.
 
@@ -18,7 +18,7 @@ From the bar chart in Figure \ref{fig:AestheticsGraph} on page \pageref{fig:Aest
 
 \subsubsection{Videos organised and filtering capabilities.}
 
-This objective has been partially met. 
+\textbf{This objective has been partially met.}
 
 The video links (tricks tutorial link) are organised in the tricks table in the order of TrickID; however there are no fitering capabilities implemented in the program at this stage. 
 
@@ -35,7 +35,7 @@ The figue above shows that the video links have been organised by TrickID. With 
 
 \subsubsection{Correct and accurate mapping to the skate parks/spots.}
 
-This objective has been met.
+\textbf{This objective has been met.}
 
 I am using the most recent Google maps image available and therefore the roads in between skate parks and spots are up to date.
 
@@ -43,7 +43,7 @@ I am using the most recent Google maps image available and therefore the roads i
 
 \subsubsection {Correct directions from current location to skate park/ spot on the map.}
 
-This objective has not been met.
+\textbf{This objective has not been met.}
 
 Currently my program has no functionality which allows the user to plot a route which gives step by step instructions.
 
@@ -51,15 +51,15 @@ Currently my program has no functionality which allows the user to plot a route 
 
 \subsubsection{Non-biased reviews.}
 
-This objective has been met to an extent. 
+\textbf{This objective has been met to an extent.}
 
 As the program is currently a single user application, the only reviews that will be in place will be the reviews that my client adds. Therefore the only way the review would be biased is if my client specifically made a biased review. 
 
 
 
-\subsubsection{Clear database with a list of tricks in.} %Need feedback
+\subsubsection{Clear database with a list of tricks in.} 
 
-This objective has been met.
+\textbf{This objective has been met.}
 
 My bar chart in Figure \ref{fig:TricksTableGraph} on page \pageref{fig:TricksTableGraph} shows that 80\% of the feedback that I received on my questionnaire agreed with the fact that it was easy to read, with a further 20\% of feedback strongly agreeing which leaves a 100\% turn over of positive feedback.
 
@@ -79,15 +79,15 @@ The figure above shows my table with my list of tricks in.
 
 \subsubsection{ Easy to filter through tricks known.}
 
-This objective has not been met. 
+\textbf{This objective has not been met.}
 
 As discussed before, filtering capabilities have not been implemented in this version of the program.
 
 
 
-\subsubsection {Display status bar messages at appropriate times to inform the user of changes *NEW*} %FEEDBACK
+\subsubsection {Display status bar messages at appropriate times to inform the user of changes *NEW*} %show some images
 
-This objective has been met.
+\textbf{This objective has been met.}
 
 I have decided this as 100\% of my questionnaires that I received back strongly agree with the statement. This is shown by my questionnaire section (\ref{QSub}) of my evaluation on page \pageref{QSub}.
 
@@ -95,7 +95,7 @@ I have decided this as 100\% of my questionnaires that I received back strongly 
 
 \subsubsection {Allow for the user to contact the developer *NEW*}
 
-This objective has been met.
+\textbf{This objective has been met.}
 
 
 \begin{figure}[H]
@@ -109,23 +109,23 @@ The figure above shows the form in the support tab which users can fill in, in o
 
 \subsubsection {Ensure that the profile picture can be changed easily *NEW*} 
 
-This objective has been met.
+\textbf{This objective has been met.}
+
+To change the profile picture the user needs to click the 'change picture' button in the tool bar and then select the image they wish to change the profile picture to. I have met this objective and this is backed up by the feedback received from my questionnaire were everyone who responded, replied with 'yes' to the question asking if the profile picture was easy to change. My questionnaire responses can be found in section \ref{QSub} on page \pageref{QSub}.
+
+
+
+\subsubsection {Ensure that the profile name can be edited easily *NEW*} 
+
+\textbf{This objective has been met.}
 
 This is backed up by the feedback received from my questionnaire were everyone who responded, replied with 'yes' to the question asking if the profile picture was easy to change. My questionnaire responses can be found in section \ref{QSub} on page \pageref{QSub}.
 
 
 
-\subsubsection {Ensure that the profile name can be edited easily *NEW*} %Need feedback
+\subsubsection {Ensure that the profile email can be edited easily *NEW*} 
 
-This objective has been met.
-
-This is backed up by the feedback received from my questionnaire were everyone who responded, replied with 'yes' to the question asking if the profile picture was easy to change. My questionnaire responses can be found in section \ref{QSub} on page \pageref{QSub}.
-
-
-
-\subsubsection {Ensure that the profile email can be edited easily *NEW*} %Need feedback
-
-This objective has been met.
+\textbf{This objective has been met.}
 
 This is backed up by the feedback received from my questionnaire were everyone who responded, replied with 'yes' to the question asking if the profile picture was easy to change. My questionnaire responses can be found in section \ref{QSub} on page \pageref{QSub}.
 
@@ -134,25 +134,25 @@ This is backed up by the feedback received from my questionnaire were everyone w
 
 \subsubsection {Ensure that videos can be filtered by categories. e.g easy, medium, hard tricks.}
 
-This objective hasn't been met.
+\textbf{This objective hasn't been met.}
 
 As discussed before, filtering capabilities have not been implemented in this version of the program.
 
 
 
 
-\subsubsection {Ensure that videos load correctly and are linked to the right video.}
+\subsubsection {Ensure that videos load correctly and are linked to the right video.} %Show images
 
-This objective has been met.
+\textbf{This objective has been met.}
 
  I have used a regular expression to validate an official YouTube video link, and on top of that referential integrity has been enforced in the database so that the tutorial link will be assigned to the trick that it was added to by the user. 
 
 
 
 
-\subsubsection {Ensure that videos are displayed at the correct size/resolution that the monitor of the computer is.}
+\subsubsection {Ensure that videos are displayed at the correct size/resolution that the monitor of the computer is.} %Show images
 
-This objective has been met.
+\textbf{This objective has been met.}
 
 As the videos are viewed in the computers default web browser, the videos will be shown in the correct size/resolution that the monitor is.
 
@@ -160,19 +160,19 @@ As the videos are viewed in the computers default web browser, the videos will b
 
 \subsubsection {Ensure the database can add, edit and remove trick data (Name, description, image, completed status and tutorial link).}
 
-This objective has been met.
+\textbf{This objective has been met.}
 
-The program is able to graphically add and delete trick data and within the command line interface, the trick data can be edited. This is proven by the testing section of my coursework (Table \ref{tab:TestingResults} on page \pageref{tab:TestingResults})
+The program is able to graphically add and delete trick data and within the command line interface, the trick data can be edited. This is proven by the testing section of my coursework (Table \ref{tab:TestingResults} on page \pageref{tab:TestingResults}).
 
 \subsubsection {Ensure that the database is displayed correctly inside the application at all resolutions.}
 
-This objective has been met.
+\textbf{This objective has been met.}
 
 I have used a QTableView object within my graphical user interface which has allowed the database to stay in the layout. The program is also displayed at the resolution of the monitor that is is run on and therefore is displayed at the appropriate resolution.
 
 \subsubsection {Ensure that the tricks are marked by how hard they are by a three way scale of: Easy, Medium or Hard.}
 
-This objective has been met.
+\textbf{This objective has been met.}
 
 \begin{figure}[H]
     \includegraphics[width=\textwidth]{./Evaluation/images/TricksTableNFS.pdf}
@@ -190,19 +190,19 @@ In the figure above, the table shows that each individual trick has a trick diff
 
 \subsubsection {Ensure a checkbox is by the side of a trick to represent whether the user has completed that trick or not.}
 
-This objective hasn't been met.
+\textbf{This objective hasn't been met.}
 
 I did not get time to implement the check box functionality into the QTableView.
 
 \subsubsection {Ensure there is a search bar for a specific trick name.}
 
-This objective hasn't been met.
+\textbf{This objective hasn't been met.}
 
 I did not get time to implement the searching for a tricks functionality in the tricks tab.
 
 \subsubsection {Ensure there are filters for tricks e.g Switch trick filters.}
 
-This objective hasn't been met.
+\textbf{This objective hasn't been met.}
 
 As discussed before, filtering capabilities have not been implemented in this version of the program.
 
@@ -211,31 +211,31 @@ As discussed before, filtering capabilities have not been implemented in this ve
 
 \subsubsection {Ensure that the map is accurate to current roads.}
 
-This objective has been met.
+\textbf{This objective has been met.}
 
 I am using the most recent Google maps image available and therefore the maps object is as up to date with current roads as possible. The way that I have implemented my Google maps object means that the map will be automatically updated to the most recent version of Google maps.
 
 \subsubsection {Ensure location of the user is not revealed to anyone else.}
 
-This objective has been met.
+\textbf{This objective has been met.}
 
 The program doesn't take in the users current location and therefore it isn't stored and cannot be found.
 
 \subsubsection {Ensure that the current location marker is accurate.}
 
-This objective hasn't been met.
+\textbf{This objective hasn't been met.}
 
 My program hasn't got a current location marker implemented as the computers used to program my system did not have access to any location functionality.
 
 \subsubsection {Ensure that when giving directions to skate parks from your current location that the mapping route is correct and on viable roads. }
 
-This objective hasn't been met.
+\textbf{This objective hasn't been met.}
 
 I did not get time to add location to location directions whilst implementing my program.
 
 \subsubsection {Ensure that the program can mark skate park locations.}
 
-This objective has been met.
+\textbf{This objective has been met.}
 
 The user can mark skatepark locations by left clicking on the mouse whilst the cursor is inside the Google maps object. The coordinates will only be recorded for adding purposes when the map is in editing mode.
 
@@ -259,7 +259,7 @@ This objective is also backed up by the 100\% feedback saying that it is easy to
 
 \subsubsection {Ensure no biased reviews are posted to the app and that they're moderated before they are universally posted.}
 
-This objective has been met to an extent.
+\textbf{This objective has been met to an extent.}
 
 As the program is currently a single user application, the only reviews that will be in place will be the reviews that my client adds. Therefore the only way the review would be biased is if my client specifically made a biased review. 
 
@@ -267,7 +267,7 @@ As the program is currently a single user application, the only reviews that wil
 
 \subsubsection {Ensure the program runs fast without lag when navigating between areas of the application.}  %Need Feedback.
 
-This objective has been met.
+\textbf{This objective has been met.}
 
 For my questionnaire users were given a choice to select a number from 1 - 10 corresponding to the response of the program to activities ($1 = Slow$ and $10 = Fast$) all of the questionnaires that I received back gave the highest possible mark of 10. This leads me to believe that my program doesn't have any lag and runs fast. Whilst using my program I have also experienced the same speeds in response to activities.
 
@@ -278,7 +278,7 @@ For my questionnaire users were given a choice to select a number from 1 - 10 co
 
 
 
-\section{Effectiveness}
+\section{Effectiveness} %MORE EVIDENCE IN PLACES
 
 \subsection{Fully Effective Solutions}
 
@@ -397,13 +397,13 @@ As the videos are viewed in the computers default web browser, the videos will b
 
 
 
-\section{Learnability}
+\section{Learnability} %Outline further why the system is learnable with clear evidence
 
 My program doesn't need any prior knowledge in order to operate it. This means that I had to implement the program in a way which makes the program self explanatory. One example of this is that in my questionnaire I asked if the participant understood that the skatepark map was implemented so that the user can find new skateparks and spots. The feedback that I received shows that 100\% of the participants understood. This feedback was received from skaters and non-skaters alike. This shows that my program is easy to use.
 
 
 
-\section{Usability}
+\section{Usability} %More detail and evidence
 
 	\subsection{Readability}
 
@@ -423,7 +423,14 @@ I have used a familiar format for all programs. I have implemented a status bar 
 
 I chose to implement the program in a way which makes the program self explanatory. In my questionnaire I asked if the participant understood that the skatepark map was implemented so that the user can find new skateparks and spots. The feedback that I received shows that 100\% of the participants understood. This shows that my program is easy to use.
 
-\section{Maintainability}
+
+
+
+
+
+
+
+\section{Maintainability} %Referencing to System Maintenance?
 
 	\subsection{Fixing Bugs}
 
@@ -441,8 +448,39 @@ My program is split up into a modular structure, as each different class is a di
 
 Although Google maps code changes occasionally, I am led to believe that the code that I have used will not change. As the API key is my own personal key, the code will work as long as I leave my API key open.
 
+
+
+
+
+
+
+
+
+
+
 \section{Suggestions for Improvement} 
 
+	\subsection{Aesthetic Improvements}
+
+Despite the feedback that I received giving 100\% positive feedback on the aesthetics of my program, Stuart pointed out that there is still room for improvement. Therefore for the next release of my program I will implement a coloured style sheet to make my program more aesthetically pleasing for my client. Stuart's feedback which gave me this idea is outlined below.
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Evaluation/images/StuImprovements.jpg}
+    \caption{Stuart's Feedback for improvements} \label{fig:StuImprovementFeedback}
+\end{figure}
+
+Stuart's full feedback can be found in figure \ref{fig:StuFeedback1} on page \pageref{fig:StuFeedback1}
+
+	\subsection{Completion of the Reviews Section}
+
+Stuart pointed out that the program was not fully implemented into a graphical user interface, this is shown by the feedback snippet below. In my next release of my program the review section of my program will be fully implemented into a graphical user interface.
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Evaluation/images/StuImprovements.jpg}
+    \caption{Stuart's Feedback for improvements} \label{fig:StuImprovementFeedback}
+\end{figure}
+
+Stuart's full feedback can be found in figure \ref{fig:StuFeedback1} on page \pageref{fig:StuFeedback1}
 
 
 	\subsection{Video Filtering Capabilities}
@@ -480,7 +518,16 @@ Stuart brought to my attention that it would be pretty useful if he could have t
 
 	\subsection{Spelling Correction}
 
-As illustrated by my clients feedback, on the tricks table and the 'add trick' form, I have spelled 'obstacle' as 'obsticle'. In version 2.0 of the skateboard progress tracker, this spelling mistake will be fixed.
+As illustrated by my clients feedback (as shown below), on the tricks table and the 'add trick' form, I have spelled 'obstacle' as 'obsticle'. In version 2.0 of the skateboard progress tracker, this spelling mistake will be fixed.
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Evaluation/images/StuSpellingError.jpg}
+    \caption{Feedback on spelling error} \label{fig:StuSpellingError}
+\end{figure}
+
+Stuart's full feedback can be found in figure \ref{fig:StuFeedback1} on page \pageref{fig:StuFeedback1}
+
+
 
 
 
